--- a/css/style.css
+++ b/css/style.css
@@ -36,9 +36,9 @@ body {
     flex-direction: column;
     width: 100%;
     margin: auto;
-    /* background-image: url(../resource/typo.svg); */
+    background-image: url(../img/typo.svg);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: initial;
 }
 header {
     display: flex;
@@ -106,7 +106,7 @@ li a{
     text-align: center;
     border: 1px solid #FA47D8;
     border-radius: 8px;
-    /* margin-left: 201px; */
+    margin-left: 118px;
 }
 
 #content1{
@@ -288,6 +288,17 @@ li a{
     border: 1.5px solid #FA47D8;
 }
 
+.e80{
+    display: flex;
+    justify-content: flex-end;
+    position: absolute;
+    width: 100%;
+    z-index: -5;
+}
+.e80 img{
+    z-index: -5;
+}
+
 #content2{
     display: flex;
     flex-direction: column;
@@ -295,7 +306,7 @@ li a{
     justify-content: center;
     margin: 0 auto;
     margin-top: 88px;
-    margin-bottom: -14px;
+    margin-bottom: 100px;
     width: 55%;
 }
 #content2 h2{
@@ -329,23 +340,23 @@ li a{
 .c3-box {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-start;
     margin-left: 50px;
     width: 432px;
     padding-bottom: 40px;
     background: #161717;
     border-radius: 20px;
+    padding-left: 40px;
 }
 .img3{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
     width: 88px;
     height: 88px;
-    margin: 22px auto;
-    margin-left: 40px;
+    margin: 22px 0;
 }
 .c3-box img{
     margin: auto;
@@ -354,7 +365,7 @@ li a{
     font-family: 'Inter';
     font-size: 25px;
     line-height: 26px;
-    text-align: center;
+    /* text-align: center; */
     letter-spacing: -0.04em;
     color: #FFFFFF;
     margin-bottom: 13px;
@@ -368,7 +379,7 @@ li a{
     line-height: 26px;
     letter-spacing: -0.04em;
     color: rgba(255, 255, 255, 0.4);
-    margin-left: 20px;
+    /* margin-left: 20px; */
 }
 #content4{
     display: flex;
@@ -479,7 +490,7 @@ li a{
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    background-image: url(../resource/Group\ 1000002220.svg);
+    background-image: url(../img/Group\ 1000002220.svg);
     background-size: cover;
     background-repeat: no-repeat;
     width: 70%;
@@ -884,6 +895,12 @@ footer hr{
     text-decoration: none;
     margin-right: 5px;
 }
+.left-hdr{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
 #box4{
     margin-top: 100px;
     margin-right: 0;
@@ -892,3 +909,19 @@ footer hr{
     margin-right: 0;
 }
 /* CONENT 4  end */
+
+
+
+@media (max-width:1281px) {
+    .price-box
+    {
+        margin-right: 0;
+        margin-bottom: 118px;
+    }
+    #box4{
+        margin-top: 0
+    }
+    #box1, #box3{
+        margin-right: 33px;
+    }
+}
